# Bifractalizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_release.bat  launch.json  rebuild.bat  run_tests.bat
plugin/: CMakeLists.txt
plugin/include/Bifractalizer/: KnobElement.h  PluginEditor.h  PluginProcessor.h  TexturedButton.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp  bifractalizer.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
